static/base.css
/* FONTS */
@font-face {
    font-family: 'Montserrat';
    src: url('fonts/MontserratVar.ttf') format('truetype');
    font-weight: 100 900;

}

.theme-astral #dev-banner {
    position: fixed;
    bottom: 50px;
    right: 50px;
    width: max-content;
    height: min-content;
    background: repeating-linear-gradient(45deg,
        #000,
        #000 10px,
        #880 10px,
        #880 20px
    );
    color: white;
    font-weight: 800;
    z-index: 9999;
    border-radius: 5px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
    padding: 10px;
}


html, body {
    margin: 0;
    background: linear-gradient(to right, #000000 0%, #444444 100%);
    width: 100%;
    height: 100%;
    color: white;
    font-family: 'Montserrat', sans-serif;
}

.theme-astral {
    background: linear-gradient(to right, #8800be 0%, #0062be 100%);
    color: white;
    font-family: 'Montserrat', sans-serif;
}

.fill {
    display: block;
    width: 100%;
    height: 100%;
}

.fill-v {
    display: block;
    height: 100%;
}
.fill-h {
    display: block;
    width: 100%;
}

.hidden:not(.shown),.page:not(.shown) {
    display: none;
}

.clickable {
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
}

@media (max-width: 600px) {
    .sidebar {
        display: flex;
        width: 100%;
    }
}
@media (min-width: 600px) {
    .sidebar {
        display: flex;
        width: 400px;
    }
}
.sidebar {
    background-color: rgba(0,0,0,0.5);
    height: calc(100% - 20px);
    padding-top: 10px;
    padding-bottom: 10px;
    display: flex;
    flex-direction: column;
    transition: width 0.2s ease-in-out;
}
.sidebar-space {
    flex-grow: 2;
}
.sidebar .sidebar-text {
    margin-left: 10px;
    margin-right: 10px;
}

.text-big {
    font-size: 2em;
}
.text-mbig {
    font-size: 1.5em;
}

.debug {
    font-family: monospace;
}
.theme-astral .debug {
    color: #888888;
}

.theme-astral .key {
    font-family: monospace;
    background-color: rgba(0,0,0,0.5);
    padding: 3px 3px 1px 3px;
    border-radius: 3px;
    border-bottom: 2px solid #666666;

}

.button-sidebar-task {
    background-color: rgba(0,0,0,0.5);
    color: white;
    border: none;
    padding: 10px;
    display: flex;
    width: 100%;
    text-align: center;
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
    transition: width 0.2s ease-in-out, background-color 0.2s ease-in-out, padding 0.2s ease-in-out;
    font-family: 'Montserrat', sans-serif;
    font-size: 1em;
}
.button-sidebar-task:hover, .button-sidebar-task:focus {
    background-color: rgba(0,0,0,0.7);
    padding-left: 20px;
}

@keyframes pop {
    0% {
        transform: scale(0);
    }
    80% {
        transform: scale(1.2);
    }
    100% {
        transform: scale(1);
    }
}

.overlay-popup {
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: 101;
    background-color: rgba(0,0,0,0.5);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.overlay-popup.shown > * {
    animation: pop 0.2s ease-in-out;
}
.theme-astral .overlay-popup > * {
    padding: 10px;
    background: linear-gradient(to right, #8800be 0%, #0062be 100%);
    border-radius: 10px;
}

.show-only-focus:not(:focus):not(:active) {
    opacity: 0;
}

#qp-box {
    width: 60%;
    max-height: 80%;
    transition: height 0.2s ease-out;
}
#qp-box > input {
    width: calc(100% - 10px);
    font-size: 2em;
    font-weight: 300;
}
.theme-astral #qp-box > input {
    background: linear-gradient(to right, #68009e 0%, #00429e 100%);
    border: 3px solid #ffffff;
    border-radius: 0.25em;
    color: #ffffff;
    font-family: 'Montserrat', sans-serif;
}

.item-list-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    width: calc(100% - 20px);
    height: max-content;
    padding: 10px;
    margin-top: 10px;
    border-radius: 20px;
    word-break: break-all;
    max-height: calc(100% - 2em - 50px);
    overflow-y: auto;
}
.theme-astral .item-list-container {
    background-color: rgba(0,0,0,0.5);
}

/* start webkit/blink only */
.theme-astral .item-list-container::-webkit-scrollbar {
    width: 10px;
    height: 10px;
    background-color: transparent;  
}
.theme-astral .item-list-container::-webkit-scrollbar-thumb {
    background-color: rgba(0,0,0,0.5);;
}
/* end webkit/blink only */
/* start firefox only
@https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-color#browser_compatibility
*/
.theme-astral .item-list-container {
    scrollbar-color: #00000088 transparent;
    scrollbar-width: thin;
}
/* end firefox only */

.item-list-container > div {
    width: calc(100% - 20px);
    border-radius: 10px;
    padding: 10px;
    min-height: min-content;
}
.item-list-container > div + div {
    margin-top: 10px;
}

.theme-astral .item-list-container > div {
    background: linear-gradient(to right, #48009e 0%, #00329e 100%);
}
.theme-astral .item-list-container > div.selected {
    background: linear-gradient(to right, #186f00 0%, #c15e01 100%);
}

@keyframes bg-travel {
    0% {
        left: 110%;
        transform: rotate(0deg);
    }
    100% {
        left: -10%;
        transform: rotate(360deg);
    }
}
.particle-background {
    background-color: rgba(255, 255, 255, 0.1);
    position: fixed;
    display: block;
}

